--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "firmware/components/arduino"]
 	path = firmware/components/arduino
 	url = https://github.com/espressif/arduino-esp32
+[submodule "firmware/components/mazelib/MazeLib"]
+	path = firmware/components/mazelib/MazeLib
+	url = https://github.com/kerikun11/MazeLib.git
